hphp/test/slow/parser/variable_in_enum.php.expectf

Fatal error: Invalid expression in constant initializer in %s/variable_in_enum.php on line 4
